@startuml map
title BOATS 


' class cutscenes {
'     cutscene1()
' }

' note right of cutscenes
' scenes where user does not make 
' choices; only cutscenes play and
' user clicks along
' end note


class main {

}
note right of main
new game object when game starts
(save feature will be called here)
*have exception handling here?
end note

' class choices {

' }
' note left of choices
' where the choices of the 
' user will go, and each 
' choice will take them to a 
' new method
' end note

class game {
    {static} Game Constructor:
        self.game.username
    ..Big methods..
    menu()
    disclaimer()
    startGame([call cutscene1])
    endGame()
}
note right of game
game calls 5 big sections of the game:
* main menu
* settings
* disclaimer (game in developpment) 
  WILL BE REMOVED
* start the game (eventually save feature?)
* end game (back to main (eventually save game))
end note

package UI <<frame>> {
    class window {
        {static} Window Constructor
            self.window
            self.window.title
            self.window.geometry
            self.window.configure
        .. Methods ..
        makeFrame(width, height)
        makeLabel(frame, text, fontSize)
        makeButton(frame, image, command)
        makeInput(frame)
    }

    note bottom of window 
    for creating frames, 
    buttons, inputs, 
    labels
    end note

    class image {
        {static} Image Constructor
            self.image
        .. Methods ..
        drawImage(frame, image)
        resize(self, width, height)
        crop(x1, y1, x2, y)
    }
    note bottom of image
    for importing images for 
    characters, alphabet, 
    numbers, buttons, etc.
    end note

    ' class animated {
    '     {static} Animated Constructor:
        
    '     ..Methods..
    '     runningRight()
    '     walkingRight()
    '     runningLeft()
    '     walkingLeft()
    '     runningUp()
    '     walkingUp()
    '     runningDown()
    '     walkingDown()
    ' }
    ' note right of animated
    ' loops that loop some 
    ' animations of characters, 
    ' animals, objects, etc.
    ' end note
}
main --> game 
main --> image
game --> window


@enduml